# Ollama4Android

./: .gitattributes  .gitignore  README.md  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  host-toolchain.cmake  ollama_jni.cpp
app/src/main/java/com/ollama/android/: MainActivity.kt  OllamaApp.kt
app/src/main/java/com/ollama/android/api/: OllamaApiServer.kt  OllamaCloudClient.kt
app/src/main/java/com/ollama/android/data/: ChatMessage.kt  Model.kt  ModelRepository.kt
app/src/main/java/com/ollama/android/data/db/: ChatDatabase.kt
app/src/main/java/com/ollama/android/llama/: LlamaAndroid.kt
app/src/main/java/com/ollama/android/service/: ApiServerService.kt  InferenceService.kt
app/src/main/java/com/ollama/android/ui/: OllamaAndroidApp.kt
app/src/main/java/com/ollama/android/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/ollama/android/ui/models/: ModelsScreen.kt  ModelsViewModel.kt
app/src/main/java/com/ollama/android/ui/settings/: SettingsScreen.kt
app/src/main/java/com/ollama/android/ui/setup/: SetupScreen.kt
app/src/main/java/com/ollama/android/ui/theme/: Theme.kt
app/src/main/java/com/ollama/android/util/: DeviceOptimization.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: privacy-policy.html
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt  2.txt  3.txt
